+ added config and view options

--- a/style/style.less
+++ b/style/style.less
@@ -121,7 +121,7 @@ body {
 
             .title {
                 display: block;
-                padding: 4px;
+                padding: 6px;
                 box-sizing: content-box;
 
                 &.complete {
@@ -155,8 +155,7 @@ body {
                 }
 
                 .key {
-                    line-height: 16px;
-                    padding: 1em;
+                    height: 16px;
                 }
 
                 &:hover {
