* changed directory structure

--- a/src/style/style.less
+++ b/src/style/style.less
@@ -1,4 +1,4 @@
-@import "../node_modules/font-awesome/less/font-awesome.less";
+@import "../../node_modules/font-awesome/less/font-awesome.less";
 
 @fa-font-path: "../node_modules/font-awesome/fonts";
 
